# seal-updater

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: auto-build.yml  check.yml
src/: cli.rs  colorize.rs  global.rs  logger.rs  main.rs
src/runner/: decompress.rs  depress.rs  lib.rs  mod.rs  progress.rs
