[package]
name = "seal-updater"
version = "0.1.2"
authors = ["檀轶步棋"]
edition = "2021"

# To minimize binary size
[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
sysinfo = "0.29.10"
zip = "0.6.6" # From 0.10.0, `zip` changes its APIs fundamentally.
tar = "0.4.40"
flate2 = "1.0.27"
term_size = "0.3.2"
once_cell = "1.18.0"
chrono = "0.4.31"

# Logging
log = "0.4.20"
fern = "0.6.2"

[build-dependencies]
# For static links on Windows
static_vcruntime = "2.0.0"