[package]
name = "seal-updater"
version = "0.1.6"
authors = ["檀轶步棋"]
edition = "2021"

# To minimize binary size
[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
sysinfo = "0.30.12"
zip = "2.1.3" # From 0.10.0, `zip` changes its APIs fundamentally.
tar = "0.4.41"
flate2 = "1.0.30"
term_size = "1.0.0-beta1"
once_cell = "1.19.0"
chrono = "0.4.38"

# Logging
log = "0.4.21"
fern = "0.6.2"

[build-dependencies]
# For static links on Windows
static_vcruntime = "2.0.0"
# For manifest files for 32-bit Windows
embed-manifest = "1.4.0"
